# Kinect_tools

./: README.md  dockerfile
src/Azure_Kinect_ROS_Driver/: CMakeLists.txt
src/Azure_Kinect_ROS_Driver/cmake/: Findk4a.cmake
src/Azure_Kinect_ROS_Driver/ext/sdk/: CTestTestfile.cmake  cmake_install.cmake  k4aTargets-relwithdebinfo.cmake  k4aTargets.cmake  k4arecordTargets-relwithdebinfo.cmake  k4arecordTargets.cmake  version.rc
src/Azure_Kinect_ROS_Driver/ext/sdk/lib/: libk4a.so.1.4  libtest_dynlib.so.1.0
src/Azure_Kinect_ROS_Driver/launch/: kinect_rgbd.launch
src/Azure_Kinect_ROS_Driver/rules.d/: readme.md
src/kinect_capture/: CMakeLists.txt  azure_capturing.launch  main.cpp  package.xml
