<?xml version="1.0"?>

<package format="2">

  <name>kinect_capture</name>
  <version>0.1.0</version>
  <description>capturing package for kinect cam</description>

  <maintainer email="wliubr@connect.ust.hk">iota</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
